docroot/themes/custom/emulsifymars/components/02-molecules/contact-module/contact-module.scss
.contact-module {
  background-color: clr(subcolor-2);
  margin-top: 0;
  position: relative;
  overflow: hidden;
  padding: 5rem 2rem 4rem 2rem;
  border-top: 5px solid clr(secondary);

  @include medium {
    padding: 6rem 4rem 6.4rem;
    border-top: 8px solid clr(secondary);
  }

  @include xl {
    padding: 8rem 15.5rem 8.5rem;
    border-top: 12px solid clr(secondary);
    max-height: 534px;
  }

  &__brand-shape {
    position: absolute;
    z-index: 1;
    top: -15%;
    right: -60%;
    width: 145%;
    height: 145%;
    pointer-events: none;

    @include medium {
      top: -10%;
      right: -70%;
      width: 150%;
      height: 150%;
    }

    @include xl {
      top: -15%;
      right: -66.5%;
      width: 150%;
      height: 150%;
    }

    @include small {
      top: -15%;
      right: -90%;
      width: 145%;
      height: 145%;
    }

    svg {
      fill: rgba(clr(subcolor-1-rgb), 0.2);
      width: 100%;
      height: 100%;
    }
  }

  &__content {
    position: relative;
    z-index: 2;
  }

  &__heading {
    @include set-font($font-type: 'primary-font');

    color: clr(primary);

    @include xs {
      font-size: 2.8rem;
      line-height: 2.8rem;
      margin: 0 0 3rem 0;
    }

    @include medium {
      font-size: 4rem;
      font-weight: 500;
      line-height: 4rem;
    }

    @include large {
      font-size: 4.8rem;
      font-weight: 500;
      line-height: 4.8rem;
      max-width: 782px;
    }
  }

  &__paragraph {
    @include set-font($font-type: 'secondary-font');

    color: clr(primary);

    @include xs {
      font-size: 1.6rem;
      line-height: 2.2rem;
      margin-bottom: 4rem;
    }

    @include large {
      font-size: 1.8rem;
      line-height: 2.52rem;
      margin: 0 0 6.2rem;
      max-width: 782px;
    }
  }

  &__contact-information {
    @include xs {
      margin-bottom: 4rem;
    }

    @include medium {
      height: 5rem;
      margin-bottom: 6.3rem;
    }

    @include large {
      height: 6rem;
    }
  }

  &__contact-social {
    display: flex;

    .social-menu {
      margin: 0;
      .social-menu__item {
        margin-right: 4rem;
      }
      .social-menu__item:last-child {
        margin-right: 0;
      }
    }

    @include xs {
      flex-direction: column;
    }

    @include medium {
      flex-direction: row;
      align-items: center;
    }

    @include large {
      height: 2.2rem;
    }
  }

  &__social-heading {
    @include set-font($font-type: 'primary-font');

    color: clr(primary);
    text-transform: uppercase;
    margin: 0 4rem 0 0;

    @include xs {
      font-size: 1.6rem;
      line-height: 1.6rem;
      margin: 0 3.93rem 2rem 0;
    }

    @include medium {
      font-size: 1.8rem;
      line-height: 1.1;
      height: 2.2rem;
      margin: 0 3.93rem 0 0;
    }

    @include large {
      font-size: 2rem;
      font-weight: 500;
    }
  }

  & .default-link {
    background-color: clr(secondary);
    width: 100%;
    height: 50px;
    text-align: center;
    margin-right: 1rem;
    line-height: 5rem;
    font-size: 1.4rem;
    padding: 0 1.5rem;

    &:last-child {
      margin-right: 0;
    }

    @include small {
      min-width: 33.5rem;
      width: auto;
    }

    @include medium {
      font-size: 1.6rem;
      margin-right: 3.2rem;
      line-height: 5rem;
      min-width: 216px;
    }

    @include large {
      min-width: 318px;
      height: 60px;
      &__label {
        line-height: 60px;
      }
    }

    &__label {
      @include set-font($font-type: 'primary-font');
    }
  }

  & .contact-module__contact-information .default-link {
    min-width: 157px;
    line-height: 5rem;

    @include large {
      min-width: 202px;
    }
  }
}

